--- a/translations/messages.ru.yaml
+++ b/translations/messages.ru.yaml
@@ -4,7 +4,7 @@ app:
     description: 'Предметный и фуд фотограф в Берлине открыт для сотрудничества'
     keywords: 'Предметная фотография, Фуд фотография, фотография еды, фуд фотограф берлин, предметная фотография, сфотографировать предмет, фуд фотограф германия'
   menu:
-    logo: 'Katherina Sokhan Photography'
+    logo: 'Katheryna Sokhan Photography'
     nav:
       portfolio: 'Портфолио'
       about-me: 'Обо мне'
